--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,6 +1,13 @@
 name: CD - Deploy to ECS using Terraform
 
 on:
+
+  workflow_run:
+    workflows: ["CI - Build & Push Strapi Image to ECR"]
+    types:
+      - completed
+
+
   push:
     branches:
       - main
@@ -8,6 +15,7 @@ on:
       - "terraform/**"
       - ".github/workflows/cd.yml"
 
+ 
   workflow_dispatch:
 
 env:
@@ -21,6 +29,13 @@ permissions:
 
 jobs:
   deploy:
+    # 🔐 Condition:
+    # - Allow if triggered by push/workflow_dispatch
+    # - Allow workflow_run ONLY if CI succeeded
+    if: |
+      github.event_name != 'workflow_run' ||
+      github.event.workflow_run.conclusion == 'success'
+
     runs-on: ubuntu-latest
 
     steps:
@@ -36,7 +51,13 @@ jobs:
 
       - name: Set IMAGE_URI for ECS
         run: |
-          echo "IMAGE_URI=${AWS_ACCOUNT_ID}.dkr.ecr.${AWS_REGION}.amazonaws.com/${ECR_REPOSITORY}:${GITHUB_SHA}" >> $GITHUB_ENV
+          if [ "${{ github.event_name }}" = "workflow_run" ]; then
+            IMAGE_TAG="${{ github.event.workflow_run.head_sha }}"
+          else
+            IMAGE_TAG="${{ github.sha }}"
+          fi
+
+          echo "IMAGE_URI=${AWS_ACCOUNT_ID}.dkr.ecr.${AWS_REGION}.amazonaws.com/${ECR_REPOSITORY}:${IMAGE_TAG}" >> $GITHUB_ENV
 
       - name: Set up Terraform
         uses: hashicorp/setup-terraform@v2
@@ -52,5 +73,3 @@ jobs:
       - name: Terraform Apply
         working-directory: ./terraform
         run: terraform apply -auto-approve -var="image_uri=${IMAGE_URI}"
-
-
