--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,12 +1,10 @@
 name: CD - Deploy to ECS using Terraform
 
 on:
-
   workflow_run:
     workflows: ["CI - Build & Push Strapi Image to ECR"]
     types:
       - completed
-
 
   push:
     branches:
@@ -15,13 +13,14 @@ on:
       - "terraform/**"
       - ".github/workflows/cd.yml"
 
- 
   workflow_dispatch:
 
 env:
   AWS_REGION: ${{ secrets.AWS_REGION }}
   AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
   ECR_REPOSITORY: shoaib-strapi-image
+  CODEDEPLOY_APP: strapi-ecs-app-shoaib
+  CODEDEPLOY_DG: strapi-dg
 
 permissions:
   id-token: write
@@ -29,19 +28,18 @@ permissions:
 
 jobs:
   deploy:
-    #  Condition:
-    # - Allow if triggered by push/workflow_dispatch
-    # - Allow workflow_run ONLY if CI succeeded
-    if: |
+    if: >
       github.event_name != 'workflow_run' ||
       github.event.workflow_run.conclusion == 'success'
 
     runs-on: ubuntu-latest
 
     steps:
+     
       - name: Checkout repo
         uses: actions/checkout@v4
 
+     
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
@@ -49,27 +47,23 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_REGION }}
 
-      - name: Set IMAGE_URI for ECS
+     
+      - name: Prepare task definition
         run: |
-          if [ "${{ github.event_name }}" = "workflow_run" ]; then
-            IMAGE_TAG="${{ github.event.workflow_run.head_sha }}"
-          else
-            IMAGE_TAG="${{ github.sha }}"
-          fi
+          sed "s|IMAGE_URI|${AWS_ACCOUNT_ID}.dkr.ecr.${AWS_REGION}.amazonaws.com/${ECR_REPOSITORY}:latest|g" \
+          appspec/taskdef-template.json > taskdef.json
 
-          echo "IMAGE_URI=301782007642.dkr.ecr.${AWS_REGION}.amazonaws.com/${ECR_REPOSITORY}:latest" >> $GITHUB_ENV
+     
+      - name: Register ECS task definition
+        run: |
+          aws ecs register-task-definition \
+            --cli-input-json file://taskdef.json
 
-      - name: Set up Terraform
-        uses: hashicorp/setup-terraform@v2
-
-      - name: Terraform Init
-        working-directory: ./terraform
-        run: terraform init
-
-      - name: Terraform Plan
-        working-directory: ./terraform
-        run: terraform plan -var="image_uri=${IMAGE_URI}"
-
-      - name: Terraform Apply
-        working-directory: ./terraform
-        run: terraform apply -auto-approve -var="image_uri=${IMAGE_URI}"
+      
+      - name: Create CodeDeploy deployment
+        run: |
+          aws deploy create-deployment \
+            --application-name $CODEDEPLOY_APP \
+            --deployment-group-name $CODEDEPLOY_DG \
+            --revision revisionType=AppSpecContent,appSpecContent="{\"content\": \"$(sed 's/\"/\\\\\"/g' appspec/appspec.yaml)\"}" \
+            --region $AWS_REGION
