Updated CD for blue green

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -65,5 +65,5 @@ jobs:
           aws deploy create-deployment \
             --application-name $CODEDEPLOY_APP \
             --deployment-group-name $CODEDEPLOY_DG \
-            --revision revisionType=AppSpecContent,appSpecContent="{\"content\": \"$(sed 's/\"/\\\\\"/g' appspec/appspec.yaml)\"}" \
+            --revision revisionType=AppSpecContent,appSpecContent="{\"content\": \"$(sed 's/\"/\\\\\"/g' appspec/appspec.yml)\"}" \
             --region $AWS_REGION
