--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -35,11 +35,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-     
       - name: Checkout repo
         uses: actions/checkout@v4
 
-     
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
@@ -47,23 +45,21 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_REGION }}
 
-     
       - name: Prepare task definition
         run: |
           sed "s|IMAGE_URI|${AWS_ACCOUNT_ID}.dkr.ecr.${AWS_REGION}.amazonaws.com/${ECR_REPOSITORY}:latest|g" \
           appspec/taskdef-template.json > taskdef.json
 
-     
       - name: Register ECS task definition
         run: |
           aws ecs register-task-definition \
             --cli-input-json file://taskdef.json
 
-      
       - name: Create CodeDeploy deployment
         run: |
           aws deploy create-deployment \
             --application-name $CODEDEPLOY_APP \
             --deployment-group-name $CODEDEPLOY_DG \
-            --revision revisionType=AppSpecContent,appSpecContent="{\"content\": \"$(sed 's/\"/\\\\\"/g' appspec/appspec.yml)\"}" \
+            --revision revisionType=AppSpecContent,appSpecContent=file://appspec/appspec.yml \
             --region $AWS_REGION
+
