updated cd.yml for blue green

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -35,9 +35,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    
       - name: Checkout repo
         uses: actions/checkout@v4
 
+     
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
@@ -45,11 +47,31 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_REGION }}
 
+      
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v3
+
+      
+      - name: Terraform Init
+        working-directory: terraform
+        run: terraform init
+
+     
+      - name: Terraform Plan
+        working-directory: terraform
+        run: terraform plan
+
+     
+      - name: Terraform Apply
+        working-directory: terraform
+        run: terraform apply -auto-approve
+
       - name: Prepare task definition
         run: |
           sed "s|IMAGE_URI|${AWS_ACCOUNT_ID}.dkr.ecr.${AWS_REGION}.amazonaws.com/${ECR_REPOSITORY}:latest|g" \
           appspec/taskdef-template.json > taskdef.json
 
+     
       - name: Register ECS task definition
         run: |
           aws ecs register-task-definition \
@@ -68,5 +90,4 @@ jobs:
             --deployment-group-name $CODEDEPLOY_DG \
             --revision "$(cat revision-final.json)" \
             --region $AWS_REGION
-
 
