--- a/appspec/appspec.yml
+++ b/appspec/appspec.yml
@@ -3,7 +3,8 @@ Resources:
   - TargetService:
       Type: AWS::ECS::Service
       Properties:
-        TaskDefinition: "<TASK_DEFINITION>"
+        TaskDefinition: <TASK_DEFINITION>
         LoadBalancerInfo:
-          ContainerName: "strapi"
+          ContainerName: strapi
           ContainerPort: 1337
+
